# sample-aiml-solution-labs

./: README.md
blog/multi-vector-embedding-knowledge-base/: .gitignore  COST_ESTIMATION.md  README.md  app.py  cdk.context.json  cdk.json  pyproject.toml  requirements.txt  setup_dependencies.py
blog/multi-vector-embedding-knowledge-base/aurora_vector_kb/: .gitignore  __init__.py  aurora_vector_kb_stack.py
blog/multi-vector-embedding-knowledge-base/aurora_vector_kb/authentication/: __init__.py  cognito_construct.py  secrets_manager.py
blog/multi-vector-embedding-knowledge-base/aurora_vector_kb/database/: __init__.py  aurora_cluster.py  custom_resource_lambda.py  database_initializer.py  requirements.txt
blog/multi-vector-embedding-knowledge-base/aurora_vector_kb/layers/: __init__.py  psycopg2_layer.py
blog/multi-vector-embedding-knowledge-base/aurora_vector_kb/messaging/: __init__.py  sqs_construct.py
blog/multi-vector-embedding-knowledge-base/aurora_vector_kb/networking/: __init__.py  security_groups.py  vpc_construct.py
blog/multi-vector-embedding-knowledge-base/aurora_vector_kb/processing/: __init__.py  ingestion_lambda.py  ingestion_lambda_construct.py  requirements.txt  retrieval_lambda.py  retrieval_lambda_construct.py  sync_lambda.py  sync_lambda_construct.py
blog/multi-vector-embedding-knowledge-base/scripts/: prepare-lambda-layer.bat  prepare-lambda-layer.sh
blog/multi-vector-embedding-knowledge-base/validation/: .gitignore  README.md  SAMPLE_USE_CASE_COST.md  requirements.txt
labs/build-production-ready-ai-solutions-with-claude/: .gitignore  (+8 more)
(+115 files in other folders)
